--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   tools:context=".MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.MainActivity">
 
     <TextView
             android:id="@+id/textView"
@@ -13,7 +13,8 @@
             android:layout_margin="@dimen/margin_large"
             android:text="@string/text_information"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
             android:id="@+id/iLayout"
             android:layout_width="match_parent"
@@ -32,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="@string/text_inner_path"/>
+                android:text="@string/text_inner_path" />
 
         <Button
                 android:id="@+id/copyInternalButton"
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_middle"
                 android:background="@drawable/button_state"
-                android:text="@android:string/copy"/>
+                android:text="@android:string/copy" />
     </LinearLayout>
 
     <EditText
@@ -49,11 +50,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_middle"
             android:focusable="false"
+            android:inputType=""
             android:text="@string/text_none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iLayout"
-            android:inputType=""/>
+            app:layout_constraintTop_toBottomOf="@+id/iLayout" />
 
     <View
             android:id="@+id/view"
@@ -61,7 +62,7 @@
             android:layout_height="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/internalPathEditText"/>
+            app:layout_constraintTop_toBottomOf="@+id/internalPathEditText" />
 
     <LinearLayout
             android:id="@+id/eLayout"
@@ -81,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="@string/text_external_path"/>
+                android:text="@string/text_external_path" />
 
         <Button
                 android:id="@+id/copyExternalButton"
@@ -89,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_middle"
                 android:background="@drawable/button_state"
-                android:text="@android:string/copy"/>
+                android:text="@android:string/copy" />
     </LinearLayout>
 
     <EditText
@@ -97,58 +98,75 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_middle"
-            android:text="@string/text_none"
             android:focusable="false"
+            android:inputType=""
+            android:text="@string/text_none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/eLayout"
-            android:inputType=""/>
+            app:layout_constraintTop_toBottomOf="@+id/eLayout" />
 
     <TextView
             android:id="@+id/sizeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_none"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/externalPathEditText"
-            android:layout_marginTop="@dimen/margin_large"
-            android:layout_marginStart="@dimen/margin_middle"
-            android:layout_marginEnd="@dimen/margin_middle"/>
-
-    <LinearLayout
-            android:id="@+id/bLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_middle"
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginEnd="@dimen/margin_middle"
-            android:orientation="horizontal"
+            android:text="@string/text_none"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/externalPathEditText" />
+    <!--
+        <LinearLayout
+                android:id="@+id/bLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_middle"
+                android:layout_marginEnd="@dimen/margin_middle"
+                android:layout_marginBottom="88dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent">
+
+            <Button
+                    android:id="@+id/getPathButton"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_middle"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_state"
+                    android:text="@string/text_get"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+            <Button
+                    android:id="@+id/clearButton"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_middle"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_state"
+                    android:text="@string/text_clear"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+        </LinearLayout>
+    -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/margin_large"
+            android:background="@drawable/button_navigation_background"
+            app:itemBackground="@drawable/button_navigation_background"
+            app:itemIconTint="@drawable/bottom_navigation_item_state"
+            app:itemTextColor="@drawable/bottom_navigation_item_state"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-                android:id="@+id/getPathButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_middle"
-                android:layout_weight="1"
-                android:background="@drawable/button_state"
-                android:text="@string/text_get"
-                style="?android:attr/buttonBarButtonStyle"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <Button
-                android:id="@+id/clearButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_middle"
-                android:layout_weight="1"
-                android:background="@drawable/button_state"
-                android:text="@string/text_clear"
-                style="?android:attr/buttonBarButtonStyle"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/my_navigation_items" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
