--- a/app/src/main/res/drawable/button_navigation_background.xml
+++ b/app/src/main/res/drawable/button_navigation_background.xml
@@ -3,9 +3,9 @@
     <item >
         <shape android:shape="rectangle">
             <corners android:radius="50dip" />
-            <solid android:color="@color/colorButton" />
+            <solid android:color="@color/colorEditBackground" />
             <padding android:bottom="4dip" android:left="8dip" android:right="8dip" android:top="4dip" />
-            <stroke android:width="1dp" android:color="@android:color/white" />
+            <stroke android:width="1dp" android:color="@android:color/background_dark" />
         </shape>
     </item>
 
