--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,14 +118,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/externalPathEditText" />
-    <!--
+
         <LinearLayout
                 android:id="@+id/bLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_middle"
                 android:layout_marginEnd="@dimen/margin_middle"
-                android:layout_marginBottom="88dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -133,39 +132,40 @@
                 app:layout_constraintStart_toStartOf="parent">
 
             <Button
-                    android:id="@+id/getPathButton"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/margin_middle"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_state"
-                    android:text="@string/text_get"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                android:id="@+id/getPathButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_middle"
+                android:layout_weight="1"
+                android:background="@drawable/button_state"
+                android:text="@string/text_reacquire"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <Button
-                    android:id="@+id/clearButton"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/margin_middle"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_state"
-                    android:text="@string/text_clear"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                android:id="@+id/clearButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_middle"
+                android:layout_weight="1"
+                android:background="@drawable/button_state"
+                android:text="@string/text_clear"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent" />
         </LinearLayout>
-    -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_margin="@dimen/margin_large"
-            android:background="@drawable/button_navigation_background"
-            app:labelVisibilityMode="unlabeled"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/my_navigation_items" />
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:id="@+id/bottomNavigation"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom"-->
+<!--            android:layout_margin="@dimen/margin_large"-->
+<!--            android:background="@drawable/button_navigation_background"-->
+<!--            app:labelVisibilityMode="unlabeled"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:menu="@menu/my_navigation_items" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
