--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,6 +119,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/externalPathEditText" />
 
+    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+    <!--            android:id="@+id/bottomNavigation"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_gravity="bottom"-->
+    <!--            android:layout_margin="@dimen/margin_large"-->
+    <!--            android:background="@drawable/button_navigation_background"-->
+    <!--            app:labelVisibilityMode="unlabeled"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:menu="@menu/my_navigation_items" />-->
+
     <LinearLayout
         android:id="@+id/bLayout"
         android:layout_width="match_parent"
@@ -126,9 +139,8 @@
         android:layout_marginStart="@dimen/margin_middle"
         android:layout_marginEnd="@dimen/margin_middle"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
@@ -155,17 +167,14 @@
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent" />
     </LinearLayout>
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-    <!--            android:id="@+id/bottomNavigation"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_gravity="bottom"-->
-    <!--            android:layout_margin="@dimen/margin_large"-->
-    <!--            android:background="@drawable/button_navigation_background"-->
-    <!--            app:labelVisibilityMode="unlabeled"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            app:layout_constraintEnd_toEndOf="parent"-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:menu="@menu/my_navigation_items" />-->
 
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/ad_unit_id"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
