--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
-    <color name="colorButton">#6785C1</color>
-    <color name="colorButtonPress">#4444ff</color>
-
-    <color name="colorTextEmergency">#BC4328</color>
-    <color name="colorTextTitlePortal">#51565A</color>
-    <color name="colorTextName">#222325</color>
-    <color name="colorMenu">#3960FF</color>
-    <color name="colorMenuBackground">#6785C1</color>
-    <color name="colorNavigation">#6785C1</color>
-    <color name="colorTextBase">#1A1A1A</color>
-    <color name="colorSwitchSelected">#E6B500</color>
-    <color name="colorEditBackground">#d6d6d6</color>
-
-    <drawable name="translucent">#66FFFFFF</drawable>
-
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
